prevents zooming on global search on mobile

--- a/app/components/Nav.css
+++ b/app/components/Nav.css
@@ -105,21 +105,13 @@
     /* positioned above the rest on small viewports */
     @add-mixin max-xs {
       position: absolute;
-      bottom: var(--gutter-xs);
+      bottom: 7px;
       left: var(--gutter-sm);
-      width: 100%;
+      right: var(--gutter-sm);
+      width: calc(100% - var(--gutter));
 
-      & .search-label,
       & .search-input {
-        font-size: 0.75rem;
-      }
-      & .search-label {
-        top: 0.55em;
-        z-index: 3;
-      }
-      & .search-input {
-        width: calc(100% - 30px);
-        z-index: 2;
+        width: 100%;
       }
     }
 
@@ -131,6 +123,7 @@
       /* width dictated by flex */
       & .search-input {
         width: 100%;
+        flex: 0 0 auto;
       }
     }
 
